<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="us"
        android:entries="@array/country_names"
        android:entryValues="@array/country_values"
        android:icon="@drawable/ic_flag_black"
        android:key="@string/settings_list_country_key"
        android:negativeButtonText="@string/btn_cancel"
        android:summary="@string/settings_list_country_summary"
        android:title="@string/settings_list_country_title" />

    <ListPreference
        android:defaultValue="en"
        android:entries="@array/language_names"
        android:entryValues="@array/language_values"
        android:icon="@drawable/ic_globe_black"
        android:key="@string/settings_list_language_key"
        android:negativeButtonText="@string/btn_cancel"
        android:summary="@string/settings_list_language_summary"
        android:title="@string/settings_list_language_title" />

</PreferenceScreen>